<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_period" tools:context="com.example.abvn237.myapplication.Period">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Select period to view statement"
        android:id="@+id/textView15"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    <CheckBox
        android:id="@+id/chkThreeWeeks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView15"
        android:layout_marginTop="30dp"
        android:text="@string/check_three_weeks"/>


    <CheckBox
        android:id="@+id/chkThreeMonths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_three_months"
        android:layout_below="@+id/chkThreeWeeks"
        android:layout_alignLeft="@+id/textView15"
        android:onClick="selectItem"
        android:layout_marginTop="25dp" />

    <CheckBox
        android:id="@+id/chkThreeYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@string/check_cheque"
        android:layout_below="@+id/chkThreeMonths"
        android:layout_marginTop="22dp"
        android:onClick="selectItem"
        android:text="@string/check_three_years"/>

</RelativeLayout>
