<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_banking_statement"
    tools:context="com.example.abvn237.myapplication.BankingStatement">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Select Type of Account"
        android:id="@+id/textView15"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    <CheckBox
        android:id="@+id/chkSavings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView15"
        android:layout_marginTop="30dp"
        android:text="@string/check_saving"/>


    <CheckBox
        android:id="@+id/chkVISA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_visa"
        android:layout_below="@+id/chkSavings"
        android:layout_alignLeft="@+id/textView15"
        android:onClick="selectItem"
        android:layout_marginTop="25dp" />

    <CheckBox
        android:id="@+id/chkCheque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@string/check_cheque"
        android:layout_below="@+id/chkVISA"
        android:layout_marginTop="22dp"
        android:onClick="selectItem"
        android:text="@string/check_cheque"/>

    <CheckBox
        android:id="@+id/chkDebit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/chkCheque"
        android:layout_marginTop="24dp"
        android:onClick="selectItem"
        android:text="@string/check_debit"/>

   <!-- <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lsShowStatement"
        android:layout_below="@+id/chkDebit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp" /> -->


</RelativeLayout>
